--- a/accessor/src/main/res/drawable/button_background_shortmsg.xml
+++ b/accessor/src/main/res/drawable/button_background_shortmsg.xml
@@ -5,5 +5,5 @@
     <size
         android:width="100dp"
         android:height="10dp" />
-    <solid android:color="@color/button_background" />
+    <solid android:color="@color/gray_button_shortmsg" />
 </shape>
